# opentrons

./: ANSWER_COMMAND_FORMAT.md  ELISA_Flex_TargetCapture_MultiTarget.py  FINAL_ANSWER.md  HOW_TO_TEST.md  QUICKSTART_TESTING.md  README.md  Robot Controller.bat  TESTING.md  TEST_SUCCESS.md  TEST_SUMMARY.md  check_command_format.py  check_gripper_commands.py  check_upload.py  command_format_analysis.txt  complete_comparison_test.py  csv_to_protocol.py  debug_analyzer.py  debug_analyzer_detailed.py  debug_upload.py  deck_visualizer.py  dry_run_executor.py  example_using_custom_reservoir.py  ffmpeg_pipe_receiver.py  ffmpeg_receiver_test.py  ffmpeg_udp_receiver.py  gstreamer_receiver_test.py  hybrid_protocol_runner.py  inspect_analyzer_output.py  interactive_protocol_runner.py  latency_test.py  lz4_receiver_test.py  mix_analysis.json  openapi.json  opentrons_control_gui - Shortcut.lnk  opentrons_control_gui.py  opentrons_control_gui_backup.py  opentrons_lid_test.py  opentrons_video_2.py  pickup_and_dip_labware.py  pickup_and_dip_labware_http.py  (+38 more)
.claude/: settings.local.json
Protocols/: interactive_caps.py  interactive_empty_fill_mix.py  interactive_emptying_corner.py  interactive_emptying_micro_50uL.py  interactive_fill_mix_empty.py  interactive_fill_mix_empty_from_plate.py  interactive_filling_from_plate.py  interactive_filling_micro.py  interactive_filling_micro_50uL.py  interactive_media_change.py  interactive_mix_empty_corner.py  interactive_mixing_micro_50uL.py  interactive_spheroid_seeding.py  interactive_spheroid_seeding_full_tip _200.py  interactive_spheroid_seeding_full_tip.py  (+14 more)
(+35 files in other folders)
